[package]
name = "websocket_handshake"
version = "0.1.0"
authors = ["ryan <yarnnd@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Yarn/websocket_handshake"
description = "A library and cli for setting fan curves on some asus laptops."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha-1 = "0.8.1"
base64 = "0.12.0"
http-types = "2"
